add some env vars into run-debug.sh